--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Text to speech-Pawan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,9 +12,8 @@
         <textarea placeholder="Write anything here...."></textarea>
         <div class="row">
             <select></select>
-            <button> <img src="play.png" alt=""> Listen</button>
-        </div>
-
+            <button> <img src="play.png"> Listen</button> 
+</div>
 </div>
 <script src="script.js">  </script>
 </body>
